Upgrade dependent version

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="bower_components/color-picker/dist/color-picker.css" />
 	<!-- endbower -->
 
-	<link rel="stylesheet" href="dist/kityminder.editor.css">
+	<link rel="stylesheet" href="dist/styles/kityminder.editor.css">
 
     <style>
         html, body {
@@ -37,7 +37,6 @@
     </style>
 </head>
 <body ng-app="kityminderDemo" ng-controller="MainController">
-    <h1 class="editor-title">KityMinder Editor - Powered By FEX</h1>
     <kityminder-editor on-init="initEditor(editor, minder)"></kityminder-editor>
 </body>
 
@@ -45,7 +44,9 @@
 <script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="bower_components/angular/angular.js"></script>
-<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+<script src="bower_components/angular-animate/angular-animate.js"></script>
+<script src="bower_components/angular-touch/angular-touch.js"></script>
+<script src="bower_components/worktile-ui-bootstrap/dist/ui-bootstrap-tpls-2.6.1.js"></script>
 <script src="bower_components/codemirror/lib/codemirror.js"></script>
 <script src="bower_components/codemirror/mode/xml/xml.js"></script>
 <script src="bower_components/codemirror/mode/javascript/javascript.js"></script>
