--- a/ui/directive/expandLevel/expandLevel.html
+++ b/ui/directive/expandLevel/expandLevel.html
@@ -1,4 +1,4 @@
-<div class="btn-group-vertical" dropdown is-open="isopen">
+<div class="btn-group-vertical" uib-dropdown is-open="isopen">
     <button type="button"
             class="btn btn-default expand"
             title="{{ 'expandtoleaf' | lang:'ui' }}"
@@ -7,7 +7,7 @@
     <button type="button"
             class="btn btn-default expand-caption dropdown-toggle"
             title="{{ 'expandtoleaf' | lang:'ui' }}"
-            dropdown-toggle>
+            uib-dropdown-toggle>
         <span class="caption">{{ 'expandtoleaf' | lang:'ui' }}</span>
         <span class="caret"></span>
         <span class="sr-only">{{ 'expandtoleaf' | lang:'ui' }}</span>
