--- a/ui/directive/selectAll/selectAll.html
+++ b/ui/directive/selectAll/selectAll.html
@@ -1,4 +1,4 @@
-<div class="btn-group-vertical" dropdown is-open="isopen">
+<div class="btn-group-vertical" uib-dropdown is-open="isopen">
     <button type="button"
             class="btn btn-default select"
             title="{{ 'selectall' | lang:'ui' }}"
@@ -7,7 +7,7 @@
     <button type="button"
             class="btn btn-default select-caption dropdown-toggle"
             title="{{ 'selectall' | lang:'ui' }}"
-            dropdown-toggle>
+            uib-dropdown-toggle>
         <span class="caption">{{ 'selectall' | lang:'ui' }}</span>
         <span class="caret"></span>
         <span class="sr-only">{{ 'selectall' | lang:'ui' }}</span>
