--- a/ui/directive/themeList/themeList.html
+++ b/ui/directive/themeList/themeList.html
@@ -1,6 +1,6 @@
-<div class="dropdown theme-panel" dropdown>
+<div class="dropdown theme-panel" uib-dropdown>
 	<div class="dropdown-toggle theme-item-selected"
-        dropdown-toggle
+	    uib-dropdown-toggle
         ng-disabled="minder.queryCommandState('theme') === -1">
 		<a href class="theme-item"
            ng-style="getThemeThumbStyle(minder.queryCommandValue('theme'))"
