--- a/ui/dialog/image/image.tpl.html
+++ b/ui/dialog/image/image.tpl.html
@@ -1,9 +1,9 @@
 <div class="modal-header">
     <h3 class="modal-title">图片</h3>
 </div>
-<div class="modal-body">
-    <tabset>
-        <tab heading="图片搜索">
+<div class="modal-body km-modal">
+    <!-- <uib-tabset> -->
+        <!-- <uib-tab heading="图片搜索">
             <form class="form-inline">
                 <div class="form-group">
                     <label for="search-keyword">关键词：</label>
@@ -19,8 +19,8 @@
                     </li>
                 </ul>
             </div>
-        </tab>
-        <tab heading="外链图片">
+        </uib-tab>
+        <uib-tab heading="外链图片">
             <form>
                 <div class="form-group" ng-class="{true: 'has-success', false: 'has-error'}[urlPassed]">
                     <label for="image-url">链接地址：</label>
@@ -42,13 +42,13 @@
                     <img class="image-preview" id="image-preview" ng-src="{{ data.url }}" alt="{{ data.title }}"/>
                 </div>
             </form>
-        </tab>
-        <tab heading="上传图片" active="true">
+        </uib-tab> -->
+        <!-- <uib-tab heading="上传图片" active="true"> -->
             <form>
                 <div class="form-group">
                     <!-- 这里不能用 ng-change -->
-                    <input type="file" name="upload-image" id="upload-image" class="upload-image" accept=".jpg,.JPG,jpeg,JPEG,.png,.PNG,.gif,.GIF" onchange="angular.element(this).scope().uploadImage()"/>
-                    <label for="upload-image" class="btn btn-primary"><span>选择文件&hellip;</span></label>
+                    <input type="file" name="minder-editor-upload-image" id="minder-editor-upload-image" class="minder-editor-upload-image" accept=".jpg,.JPG,jpeg,JPEG,.png,.PNG,.gif,.GIF" onchange="angular.element(this).scope().uploadImage()"/>
+                    <label for="minder-editor-upload-image" class="btn btn-primary"><span>选择文件&hellip;</span></label>
                 </div>
                 <div class="form-group" ng-class="{'has-success' : titlePassed}">
                     <label for="image-title">提示文本：</label>
@@ -59,8 +59,8 @@
                     <img class="image-preview" id="image-preview" ng-src="{{ data.url }}" title="{{ data.title }}" alt="{{ data.title }}"/>
                 </div>
             </form>
-        </tab>
-    </tabset>
+        <!-- </uib-tab> -->
+    <!-- </uib-tabset> -->
 
 </div>
 <div class="modal-footer">
