--- a/ui/directive/fontOperator/fontOperator.html
+++ b/ui/directive/fontOperator/fontOperator.html
@@ -1,6 +1,6 @@
 <div class="font-operator">
-    <div class="dropdown font-family-list" dropdown>
-        <div class="dropdown-toggle current-font-item" dropdown-toggle ng-disabled="minder.queryCommandState('fontfamily') === -1">
+    <div class="dropdown font-family-list" uib-dropdown>
+        <div class="dropdown-toggle current-font-item" uib-dropdown-toggle ng-disabled="minder.queryCommandState('fontfamily') === -1">
             <a href class="current-font-family"  title="{{ 'fontfamily' | lang: 'ui' }}">{{ getFontfamilyName(minder.queryCommandValue('fontfamily')) || '字体' }}</a>
             <span class="caret"></span>
         </div>
@@ -10,8 +10,8 @@
             </li>
         </ul>
     </div>
-    <div class="dropdown font-size-list" dropdown>
-        <div class="dropdown-toggle current-font-item" dropdown-toggle ng-disabled="minder.queryCommandState('fontsize') === -1">
+    <div class="dropdown font-size-list" uib-dropdown>
+        <div class="dropdown-toggle current-font-item" uib-dropdown-toggle ng-disabled="minder.queryCommandState('fontsize') === -1">
             <a href class="current-font-size"  title="{{ 'fontsize' | lang: 'ui' }}">{{ minder.queryCommandValue('fontsize') || '字号' }}</a>
             <span class="caret"></span>
         </div>
