--- a/ui/directive/hyperLink/hyperLink.html
+++ b/ui/directive/hyperLink/hyperLink.html
@@ -1,4 +1,4 @@
-<div class="btn-group-vertical" dropdown is-open="isopen">
+<div class="btn-group-vertical" uib-dropdown is-open="isopen">
     <button type="button"
             class="btn btn-default hyperlink"
             title="{{ 'link' | lang:'ui' }}"
@@ -9,7 +9,7 @@
             class="btn btn-default hyperlink-caption dropdown-toggle"
             ng-disabled="minder.queryCommandState('HyperLink') === -1"
             title="{{ 'link' | lang:'ui' }}"
-            dropdown-toggle>
+            uib-dropdown-toggle>
         <span class="caption">{{ 'link' | lang:'ui' }}</span>
         <span class="caret"></span>
         <span class="sr-only">{{ 'link' | lang:'ui' }}</span>
