--- a/ui/directive/notePreviewer/notePreviewer.html
+++ b/ui/directive/notePreviewer/notePreviewer.html
@@ -1,1 +1,1 @@
-<div id="previewer-content" ng-show="showNotePreviewer" ng-style="previewerStyle" ng-bind-html="noteContent"></div>
+<div id="previewer-content" class="markdown-body" ng-show="showNotePreviewer" ng-style="previewerStyle" ng-bind-html="noteContent"></div>
