--- a/ui/directive/searchBtn/searchBtn.html
+++ b/ui/directive/searchBtn/searchBtn.html
@@ -1,4 +1,4 @@
-<div class="btn-group-vertical" dropdown is-open="isopen">
+<div class="btn-group-vertical" uib-dropdown is-open="isopen">
     <button type="button"
             class="btn btn-default search"
             title="{{ 'search' | lang:'ui' }}"
